--- a/src/Pages/Landing/shared/layoutes/Footer/style.module.css
+++ b/src/Pages/Landing/shared/layoutes/Footer/style.module.css
@@ -44,7 +44,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 40px;
   font-family: Space Grotesk;
   font-size: 20px;
   font-weight: 400;
@@ -62,6 +62,62 @@
 }
 
 /* MIDDLE */
+
+.middle {
+  width: 100%;
+  height: 200px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.contact {
+  padding: 58px, 40px, 58px, 40px;
+  height: 100%;
+  width: 40%;
+}
+
+.email {
+  background: rgba(41, 42, 50, 1);
+  border-radius: 14px;
+  height: 100%;
+  width: 60%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
+
+.email input {
+  width: 285px;
+  height: 67px;
+  border-radius: 14px;
+  border: 1px solid white;
+  background: none;
+  padding: 20px;
+  color: white;
+  font-family: Space Grotesk;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22.97px;
+  text-align: left;
+}
+
+.email button {
+  width: 249px;
+  height: 68px;
+  border-radius: 14px;
+  background: rgba(201, 241, 255, 1);
+  border: none;
+  font-family: Space Grotesk;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 28px;
+  text-align: center;
+  cursor: pointer;
+}
 
 /* BOTTOM */
 
