--- a/src/Pages/Landing/shared/layoutes/Footer/style.module.css
+++ b/src/Pages/Landing/shared/layoutes/Footer/style.module.css
@@ -73,9 +73,40 @@
 }
 
 .contact {
-  padding: 58px, 40px, 58px, 40px;
   height: 100%;
   width: 40%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.contact p {
+  font-family: Space Grotesk;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22.97px;
+  text-align: left;
+  width: 60%;
+}
+
+.contact div {
+  width: 130px;
+  height: 30px;
+  padding: 7px;
+  border-radius: 7px;
+  background: rgba(201, 241, 255, 1);
+  color: rgba(0, 0, 0, 1);
+
+  font-family: Space Grotesk;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 25.52px;
+  text-align: left;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .email {
