--- a/src/Pages/Landing/Home/Header/style.module.css
+++ b/src/Pages/Landing/Home/Header/style.module.css
@@ -1,6 +1,7 @@
 .header {
   width: 100%;
-  height: 87vh;
+  height: 100vh;
+  padding-top: 100px;
 }
 
 .container {
@@ -59,4 +60,48 @@
 .right {
   width: 90%;
   object-fit: cover;
+}
+
+/* Media */
+
+@media screen and (max-width: 1020px) {
+  .right {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 570px) {
+  .left h1 {
+    font-size: 50px;
+    line-height: 65px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .left h1 {
+    font-size: 45px;
+    line-height: 55px;
+  }
+
+  .left p {
+    font-size: 18px;
+    line-height: 25px;
+  }
+}
+
+@media screen and (max-width: 355px) {
+  .left {
+    gap: 70px;
+  }
+
+  .left h1 {
+    font-size: 40px;
+    line-height: 45px;
+  }
+
+  .left button {
+    width: 150px;
+    height: 60px;
+    padding: 10px 20px 10px 20px;
+  }
 }
