--- a/src/Pages/Landing/shared/layoutes/Navbar/style.module.css
+++ b/src/Pages/Landing/shared/layoutes/Navbar/style.module.css
@@ -1,81 +1,62 @@
-.navbar {
-  color: black;
-  width: 100%;
-  height: 125px;
-}
-
-.container {
-  width: 85%;
-  margin: auto;
-  height: 100%;
+.nav {
+  height: 100px;
+  padding: 5px 7%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  z-index: 1;
+  position: fixed;
+  width: 100%;
+  background-color: white;
 }
 
-.logoDiv {
+.logo {
   display: flex;
-  gap: 30px;
+  align-items: center;
+}
 
+.logo img {
+  height: 80%;
+  width: auto;
+  margin-right: 10px;
+}
+
+.logo p {
   font-family: Space Grotesk;
   font-size: 24px;
   font-weight: 500;
   line-height: 28px;
-  text-align: left;
-  cursor: pointer;
+  padding-left: 15px;
 }
 
-.menu {
+.navList {
+  list-style: none;
   display: flex;
+  align-items: center;
   gap: 50px;
 }
 
-.menu a {
+.navList li a {
   text-decoration: none;
-  color: black;
+  color: #000;
+  font-size: 95%;
+  font-family: Space Grotesk;
   font-size: 20px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.hamburger {
-  display: none;
-  font-size: 24px;
-  cursor: pointer;
-}
-
-@media (max-width: 768px) {
-  .menu {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
-    left: 0;
-    right: 0;
-    background-color: #333;
-    padding: 10px 0;
-  }
-
-  .menu.active {
-    display: flex;
-  }
-
-  .hamburger {
-    display: block;
-  }
+  font-weight: 400;
+  line-height: 28px;
+  text-align: left;
 }
 
 /* Login and Register Button */
 
 .loginButton {
-  width: 120px;
-  height: 70px;
-  gap: 10px;
+  padding: 20px 35px 20px 35px;
   border-radius: 14px;
   border: 1px solid black;
   transition: background-color 0.3s;
+  font-size: 18px;
 
   display: flex;
   justify-content: center;
@@ -88,8 +69,8 @@
 }
 
 .registerButton {
-  width: 120px;
-  height: 70px;
+  font-size: 18px;
+  padding: 20px 35px 20px 35px;
   gap: 10px;
   border-radius: 14px;
   border: 1px solid black;
@@ -104,4 +85,139 @@
 .registerButton:hover {
   background-color: white;
   cursor: pointer;
+}
+
+/* Media */
+
+.hamburger {
+  display: none;
+  cursor: pointer;
+}
+
+.hamburger .line {
+  width: 25px;
+  height: 1px;
+  background-color: #1f1f1f;
+  display: block;
+  margin: 7px auto;
+  transition: all 0.3s ease-in-out;
+}
+
+.hamburgerActive {
+  transition: all 0.3s ease-in-out;
+  transform: rotate(45deg);
+}
+
+.hamburgerActive .line:nth-child(2) {
+  width: 0px;
+}
+
+.hamburgerActive .line:nth-child(1),
+.hamburgerActive .line:nth-child(3) {
+  transition-delay: 0.3s;
+}
+
+.hamburgerActive .line:nth-child(1) {
+  transform: translateY(12px);
+}
+
+.hamburgerActive .line:nth-child(3) {
+  transform: translateY(-5px) rotate(90deg);
+}
+
+.menubar {
+  position: absolute;
+  top: 0;
+  left: -60%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 60%;
+  height: 100vh;
+  padding: 20% 0;
+  background: rgba(255, 255, 255);
+  transition: all 0.5s ease-in;
+  z-index: 2;
+}
+
+.active {
+  left: 0;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.menubar ul {
+  padding: 0;
+  list-style: none;
+}
+
+.menubar ul li {
+  margin-bottom: 32px;
+}
+
+.menubar ul li a {
+  text-decoration: none;
+  color: #000;
+  font-size: 95%;
+  font-weight: 400;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.menubar ul li a:hover {
+  background-color: #f5f5f5;
+}
+
+@media screen and (max-width: 950px) {
+  .hamburger {
+    display: block;
+  }
+
+  .navList {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1250px) {
+  .logo p {
+    font-size: 18px;
+  }
+
+  .navList li a {
+    font-size: 18px;
+  }
+
+  .loginButton {
+    font-size: 16px;
+  }
+
+  .registerButton {
+    font-size: 16px;
+  }
+
+  .navList {
+    gap: 30px;
+  }
+}
+
+@media screen and (max-width: 1250px) {
+  .loginButton {
+    padding: 10px 17.5px 10px 17.5px;
+  }
+
+  .registerButton {
+    padding: 10px 17.5px 10px 17.5px;
+  }
+}
+
+@media screen and (max-width: 970px) {
+  .logo p {
+    font-size: 16px;
+  }
+  .navList li a {
+    font-size: 16px;
+  }
+
+  .navList {
+    gap: 25px;
+  }
 }
