--- a/src/Pages/Landing/Home/Our Working Process/style.module.css
+++ b/src/Pages/Landing/Home/Our Working Process/style.module.css
@@ -9,7 +9,6 @@
 }
 
 /* Header Section */
-
 .header {
   width: 100%;
   display: flex;
@@ -30,7 +29,7 @@
 }
 
 .headerSubtitle {
-  font-family: Space Grotesk;
+  font-family: "Space Grotesk", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 22.97px;
@@ -38,7 +37,6 @@
 }
 
 /* Accordion Section */
-
 .accordionItem {
   border: 1px solid rgba(25, 26, 35, 1);
   border-bottom: 5px solid rgba(25, 26, 35, 1);
@@ -50,7 +48,7 @@
   padding-right: 60px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s ease;
-  margin-bottom: 20px; /* Gap between accordion items */
+  margin-bottom: 20px;
 }
 
 .accordionItemOpen {
@@ -102,8 +100,106 @@
   font-weight: 400;
   line-height: 22.97px;
   text-align: left;
-
   margin-top: 1rem;
   padding-top: 2rem;
   border-top: 1px solid black;
+}
+
+/* Media Queries */
+@media (max-width: 1200px) {
+  .container {
+    width: 90%;
+  }
+
+  .header {
+    flex-direction: column;
+    text-align: center;
+    gap: 20px;
+  }
+
+  .headerSubtitle {
+    width: 100%;
+  }
+
+  .accordionNumber {
+    font-size: 50px;
+  }
+
+  .accordionTitle {
+    font-size: 24px;
+  }
+
+  .accordionToggle {
+    font-size: 40px;
+    width: 50px;
+    height: 50px;
+  }
+}
+
+@media (max-width: 768px) {
+  .headerTitle {
+    font-size: 28px;
+  }
+
+  .headerSubtitle {
+    font-size: 16px;
+  }
+
+  .accordionItem {
+    padding: 30px;
+  }
+
+  .accordionNumber {
+    font-size: 40px;
+  }
+
+  .accordionTitle {
+    font-size: 20px;
+  }
+
+  .accordionToggle {
+    font-size: 35px;
+    width: 40px;
+    height: 40px;
+  }
+
+  .accordionContent {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 480px) {
+  .headerTitle {
+    font-size: 24px;
+  }
+
+  .headerSubtitle {
+    font-size: 14px;
+  }
+
+  .accordionItem {
+    padding: 20px;
+    border-radius: 30px;
+  }
+
+  .accordionNumber {
+    font-size: 25px;
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .accordionTitle {
+    font-size: 18px;
+    line-height: 25px;
+  }
+
+  .accordionToggle {
+    font-size: 20px;
+    width: 30px;
+    height: 30px;
+  }
+
+  .accordionContent {
+    font-size: 14px;
+  }
 }
